[package]
name = "v2x"
description = "v2x is a command-line tool that converts vector graphic images (SVG) into multiple output formats, primarily raster-based formats such as JPG, PNG, TIFF, WebP, and AVIF"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
image = { version = "0.25.9", default-features = false, features = ["avif", "jpeg", "png", "rayon", "tiff", "webp"] }
log = "0.4.28"
rayon = "1.11.0"
resvg = "0.45.1"
tiny-skia = "0.11.4"
usvg = "0.45.1"
